--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </head>
   <body>
     <!-- Page Header-->
-    <header class="page-header section page">
+    <header class="page-header">
       <!-- Burger button -mobile -->
       <div class="burger" id="burger">
         <div class="burger-icon"></div>
@@ -38,9 +38,10 @@
       </div>
       <!-- /Contact button -mobile -->
       <div class="page-header_contact js-contact-block">
-        <ul class="page-header_contact-list">
+          <div class="page-header_wrapper">
+        <ul class="page-header_contact-list contact-list">
           <li>
-            <i class="fas fa-phone-alt"></i>
+            <i class="fas fa-phone-alt"></i>          
             <a class="page-header_contact-link" href="tel:#">1-800-0000-000,</a>
             <a class="page-header_contact-link" href="tel:#">1-800-0000-000</a>
           </li>
@@ -82,7 +83,9 @@
         </ul>
         <button class="main-btn btn-color button-sm mobile-btn">Book</button>
       </div>
-      <div class="navbar">
+      </div>
+      <div class="page-header_navbar">
+        <div class="page-header_wrapper">
         <div class="logo">
           <a href="index.html">
             <img src="images/logo.png" alt="" width="143" height="36" />
@@ -104,6 +107,32 @@
               <li class="navbar_center_menu-item">
                 <a class="navbar_center_menu-link" href="#">Blog</a>
                 <span class="navbar_center_icon"></span>
+                <ul class="navbar_center-submenu">
+                    <li>
+                      <ul class="navbar_center-submenu--item">
+                        <li>
+                          <i class="fas fa-arrow-right"></i
+                          ><a href="about-me.html">About Me</a>
+                        </li>
+                        <li>
+                          <i class="fas fa-arrow-right"></i
+                          ><a href="our-history.html">Our History</a>
+                        </li>
+                        <li>
+                          <i class="fas fa-arrow-right"></i
+                          ><a href="services.html">Services</a>
+                        </li>
+                        <li>
+                          <i class="fas fa-arrow-right"></i
+                          ><a href="single-service.html">Single Service</a>
+                        </li>
+                        <li>
+                          <i class="fas fa-arrow-right"></i
+                          ><a href="careers.html">Careers</a>
+                        </li>
+                      </ul>
+                    </li>
+                </ul>
               </li>
               <li class="navbar_center_menu-item">
                 <a class="navbar_center_menu-link" href="#">Pages</a>
@@ -210,6 +239,7 @@
         <div class="navbar_rigth">
           <button class="main-btn btn-color button-sm">Book</button>
         </div>
+        </div>
       </div>
     </header>
     <main>
@@ -269,6 +299,92 @@
               </div>
         </div>
       </section>
+        <section class="section-services container">
+          <h3 class="section-title">services</h3>
+                 <div class="row">
+                    <div class="col-md-6 col-lg-4">
+                      <div class="section-services_card">
+                      <div class="section-services_card--img">
+                      <img src="images/slider4.jpg" alt="card1">                                       
+                      <div class="section-services_card--overline">
+                         <div class="overline-icon">
+                        <i class="fas fa-plus"></i>
+                        </div>
+                      </div> 
+                    </div>
+                    </div> 
+                    <h4 class="section-subtitle">Ремонт и реставрация кожи</h4>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                        <div class="section-services_card">
+                        <div class="section-services_card--img">
+                        <img src="images/slider5.jpg" alt="card1">                                       
+                        <div class="section-services_card--overline">
+                           <div class="overline-icon">
+                          <button class="main-btn transparent-btn button-sm">Просмотр</button>
+                          <button class="main-btn transparent-btn button-sm">Заказать</button>
+                          </div>
+                        </div> 
+                      </div>
+                      </div> 
+                      <h4 class="section-subtitle">Ремонт и реставрация кожи</h4>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                        <div class="section-services_card">
+                        <div class="section-services_card--img">
+                        <img src="images/slider4.jpg" alt="card1">                                       
+                        <div class="section-services_card--overline">
+                           <div class="overline-icon">
+                          <i class="fas fa-plus"></i>
+                          </div>
+                        </div> 
+                      </div>
+                      </div> 
+                      <h4 class="section-subtitle">Ремонт и реставрация кожи</h4>
+                      </div>
+                      <div class="col-md-6 col-lg-4">
+                          <div class="section-services_card">
+                          <div class="section-services_card--img">
+                          <img src="images/slider5.jpg" alt="card1">                                       
+                          <div class="section-services_card--overline">
+                             <div class="overline-icon">
+                            <button class="main-btn transparent-btn button-sm">Просмотр</button>
+                            <button class="main-btn transparent-btn button-sm">Заказать</button>
+                            </div>
+                          </div> 
+                        </div>
+                        </div> 
+                        <h4 class="section-subtitle">Ремонт и реставрация кожи</h4>
+                      </div>
+                      <div class="col-md-6 col-lg-4">
+                        <div class="section-services_card">
+                        <div class="section-services_card--img">
+                        <img src="images/slider4.jpg" alt="card1">                                       
+                        <div class="section-services_card--overline">
+                           <div class="overline-icon">
+                          <i class="fas fa-plus"></i>
+                          </div>
+                        </div> 
+                      </div>
+                      </div> 
+                      <h4 class="section-subtitle">Ремонт и реставрация кожи</h4>
+                      </div>
+                      <div class="col-md-6 col-lg-4">
+                          <div class="section-services_card">
+                          <div class="section-services_card--img">
+                          <img src="images/slider5.jpg" alt="card1">                                       
+                          <div class="section-services_card--overline">
+                             <div class="overline-icon">
+                            <button class="main-btn transparent-btn button-sm">Просмотр</button>
+                            <button class="main-btn transparent-btn button-sm">Заказать</button>
+                            </div>
+                          </div> 
+                        </div>
+                        </div> 
+                        <h4 class="section-subtitle">Ремонт и реставрация кожи</h4>
+                      </div>
+             </div>
+        </section>   
     </main>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="script/script.js"></script>
