add example saction

--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
                       </div> 
                       <h4 class="section-subtitle">Ремонт и реставрация кожи</h4>
                       </div>
-                      <div class="col-md-6 col-lg-4">
+                      <div class="example col-md-6 col-lg-4">
                           <div class="section-services_card">
                           <div class="section-services_card--img">
                           <img src="images/slider5.jpg" alt="card1">                                       
