add slider background

--- a/index.html
+++ b/index.html
@@ -246,14 +246,14 @@
       <section class="section-slider">
           <div class="swiper-container main-slider">
             <!-- Additional required wrapper -->
-            <div class="swiper-wrapper">
+            <div class="swiper-wrapper ">
               <!-- Slides -->
-              <div class="swiper-slide slider-one">
-                  <div class="container container-bigger">
+              <div class="swiper-slide main-slider_item" style="background-image: url(images/slider1.jpg);">
+                  <div class="container" >
                 <div
-                  class="row justify-content-sm-center justify-content-md-start row-ten"
+                  class="row justify-content-sm-center justify-content-md-start"
                 >
-                  <div class="section-slider_text-block col-md-6 col-lg-4 col-xxl-3">
+                  <div class="section-slider_text-block col-md-6 col-lg-4">
                     <h2 class="section-slider_text-block--title">Lorem ipsum dolor</h2>
                     <p class="section-slider_text-block--text">
                       Lorem ipsum dolor sit amet, consectetur adipisicing elit.
@@ -263,13 +263,13 @@
                 </div>
                 </div>
               </div>
-              <div class="swiper-slide slider-two">
-                  <div class="container container-bigger">
+              <div class="swiper-slide main-slider_item" style="background-image: url(images/slider2.jpg);">
+                  <div class="container">
                 <div
-                  class="row justify-content-sm-center justify-content-md-start row-ten"
+                  class="row justify-content-sm-center justify-content-md-start"
                 >
-                  <div class="section-slider_text-block col-md-6 col-lg-4 col-xxl-3">
-                    <h2 class="section-slider_text-block--title">Lorem ipsum dolor</h2>
+                  <div class="section-slider_text-block col-md-6 col-lg-4">
+                    <h2 class="section-slider_text-block--title">Lorem ipsum dolor1</h2>
                     <p class="section-slider_text-block--text">
                       Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                     </p>
@@ -278,13 +278,13 @@
                 </div>
                 </div>
               </div>
-              <div class="swiper-slide slider-three">
-                <div class="container container-bigger">
+              <div class="swiper-slide main-slider_item" style="background-image: url(images/slider3.jpg);">
+                <div class="container">
                 <div
-                  class="row justify-content-sm-center justify-content-md-start row-ten"
+                  class="row justify-content-sm-center justify-content-md-start"
                 >
-                  <div class="section-slider_text-block col-md-6 col-lg-4 col-xxl-3">
-                    <h2 class="section-slider_text-block--title">Lorem ipsum dolor</h2>
+                  <div class="section-slider_text-block col-md-6 col-lg-4">
+                    <h2 class="section-slider_text-block--title">Lorem ipsum dolor2</h2>
                     <p class="section-slider_text-block--text">
                       Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                     </p>
