add burger menu

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             ></a>
           </li>
         </ul>
-        <button class="main-btn btn-color button-sm mobile-btn">Book</button>
+        <button class="main-btn btn-color mobile-btn">Book</button>
       </div>
       </div>
       <div class="page-header_navbar">
@@ -141,12 +141,12 @@
                   <li>
                     <ul class="navbar_center-submenu--item">
                       <li>
-                        <i class="fas fa-arrow-right"></i
-                        ><a href="about-me.html">About Me</a>
+                        <i class="fas fa-arrow-right"></i>
+                        <a href="about-me.html">About Me</a>
                       </li>
                       <li>
-                        <i class="fas fa-arrow-right"></i
-                        ><a href="our-history.html">Our History</a>
+                        <i class="fas fa-arrow-right"></i>
+                        <a href="our-history.html">Our History</a>
                       </li>
                       <li>
                         <i class="fas fa-arrow-right"></i
@@ -163,28 +163,6 @@
                     </ul>
                   </li>
                   <li>
-                    <ul class="navbar_center-submenu--item">
-                      <li>
-                        <i class="fas fa-arrow-right"></i
-                        ><a href="single-job.html">Single Job</a>
-                      </li>
-                      <li>
-                        <i class="fas fa-arrow-right"></i
-                        ><a href="login-page.html">Login Page</a>
-                      </li>
-                      <li>
-                        <i class="fas fa-arrow-right"></i
-                        ><a href="registration-page.html">Registration Page</a>
-                      </li>
-                      <li>
-                        <i class="fas fa-arrow-right"></i
-                        ><a href="pricing-page.html">Pricing Page</a>
-                      </li>
-                      <li>
-                        <i class="fas fa-arrow-right"></i
-                        ><a href="404-page.html">404 Page</a>
-                      </li>
-                    </ul>
                   </li>
                   <li>
                     <ul class="navbar_center-submenu--item">
@@ -237,7 +215,7 @@
           </nav>
         </div>
         <div class="navbar_rigth">
-          <button class="main-btn btn-color button-sm">Book</button>
+          <button class="main-btn btn-color">Book</button>
         </div>
         </div>
       </div>
@@ -258,7 +236,7 @@
                     <p class="section-slider_text-block--text">
                       Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                     </p>
-                    <button class="main-btn transparent-btn button-sm">learn more</button>
+                    <button class="main-btn transparent-btn">learn more</button>
                   </div>
                 </div>
                 </div>
@@ -273,7 +251,7 @@
                     <p class="section-slider_text-block--text">
                       Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                     </p>
-                    <button class="main-btn transparent-btn button-sm">learn more</button>
+                    <button class="main-btn transparent-btn">learn more</button>
                   </div>
                 </div>
                 </div>
@@ -288,7 +266,7 @@
                     <p class="section-slider_text-block--text">
                       Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                     </p>
-                    <button class="main-btn transparent-btn button-sm">learn more</button>
+                    <button class="main-btn transparent-btn">learn more</button>
                   </div>
                 </div>
               </div>
@@ -321,8 +299,8 @@
                         <img src="images/slider5.jpg" alt="card1">                                       
                         <div class="section-services_card--overline">
                            <div class="overline-icon">
-                          <button class="main-btn transparent-btn button-sm">Просмотр</button>
-                          <button class="main-btn transparent-btn button-sm">Заказать</button>
+                          <button class="main-btn transparent-btn">Просмотр</button>
+                          <button class="main-btn transparent-btn">Заказать</button>
                           </div>
                         </div> 
                       </div>
@@ -348,8 +326,8 @@
                           <img src="images/slider5.jpg" alt="card1">                                       
                           <div class="section-services_card--overline">
                              <div class="overline-icon">
-                            <button class="main-btn transparent-btn button-sm">Просмотр</button>
-                            <button class="main-btn transparent-btn button-sm">Заказать</button>
+                            <button class="main-btn transparent-btn">Просмотр</button>
+                            <button class="main-btn transparent-btn">Заказать</button>
                             </div>
                           </div> 
                         </div>
@@ -375,8 +353,8 @@
                           <img src="images/slider5.jpg" alt="card1">                                       
                           <div class="section-services_card--overline">
                              <div class="overline-icon">
-                            <button class="main-btn transparent-btn button-sm">Просмотр</button>
-                            <button class="main-btn transparent-btn button-sm">Заказать</button>
+                            <button class="main-btn transparent-btn">Просмотр</button>
+                            <button class="main-btn transparent-btn">Заказать</button>
                             </div>
                           </div> 
                         </div>
