--- a/index.html
+++ b/index.html
@@ -309,17 +309,17 @@
       <section class="section-services container">
         <h3 class="section-title">services</h3>
         <div class="row">
-          <div class="col-md-6 col-lg-4">
+          <div class="col-10 offset-1 col-md-6 offset-md-0 col-lg-4">
             <div class="section-services_card">
-              <div class="section-services_card--img js-lightBoxItem">
+              <div class="section-services_card--img ">
                 <img
-                  class="card-img"
+                  class="card-img js-smallImg"
                   src="images/slider4.jpg"
                   alt="card1"
                   data-source="images/slider4.jpg"
                 />
                 <div class="section-services_card--overline">
-                  <div class="overline-icon">
+                  <div class="overline-icon js-lightboxOpen">
                     <img src="images/zoom.svg" alt="zoom" />
                   </div>
                 </div>
@@ -329,17 +329,17 @@
               >Ремонт и реставрация кожи</a
             >
           </div>
-          <div class="col-md-6 col-lg-4">
+          <div class="col-10 offset-1 col-md-6 offset-md-0 col-lg-4">
             <div class="section-services_card">
-              <div class="section-services_card--img js-lightBoxItem">
+              <div class="section-services_card--img">
                 <img
-                  class="card-img"
+                  class="card-img js-smallImg"
                   src="images/slider5.jpg"
                   alt="card1"
                   data-source="images/slider5.jpg"
                 />
                 <div class="section-services_card--overline">
-                  <div class="overline-icon">
+                  <div class="overline-icon js-lightboxOpen">
                     <img src="images/zoom.svg" alt="zoom" />
                   </div>
                 </div>
@@ -349,77 +349,17 @@
               >Ремонт и реставрация кожи</a
             >
           </div>
-          <div class="col-md-6 col-lg-4">
+          <div class="col-10 offset-1 col-md-6 offset-md-0 col-lg-4">
             <div class="section-services_card">
-              <div class="section-services_card--img js-lightBoxItem">
+              <div class="section-services_card--img">
                 <img
-                  class="card-img"
+                  class="card-img js-smallImg"
                   src="images/slider1.jpg"
                   alt="card1"
                   data-source="images/slider1.jpg"
                 />
                 <div class="section-services_card--overline">
-                  <div class="overline-icon">
-                    <img src="images/zoom.svg" alt="zoom" />
-                  </div>
-                </div>
-              </div>
-            </div>
-            <a class="section-subtitle" href="#" target="_blank"
-              >Ремонт и реставрация кожи</a
-            >
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <div class="section-services_card">
-              <div class="section-services_card--img js-lightBoxItem">
-                <img
-                  class="card-img"
-                  src="images/slider4.jpg"
-                  alt="card1"
-                  data-source="images/slider4.jpg"
-                />
-                <div class="section-services_card--overline">
-                  <div class="overline-icon">
-                    <img src="images/zoom.svg" alt="zoom" />
-                  </div>
-                </div>
-              </div>
-            </div>
-            <a class="section-subtitle" href="#" target="_blank"
-              >Ремонт и реставрация кожи</a
-            >
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <div class="section-services_card">
-              <div class="section-services_card--img js-lightBoxItem">
-                <img
-                  class="card-img"
-                  src="images/slider4.jpg"
-                  alt="card1"
-                  data-source="images/slider4.jpg"
-                />
-                <div class="section-services_card--overline">
-                  <div class="overline-icon">
-                    <img src="images/zoom.svg" alt="zoom" />
-                  </div>
-                </div>
-              </div>
-            </div>
-            <a class="section-subtitle" href="#" target="_blank"
-              >Ремонт и реставрация кожи</a
-            >
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <div class="section-services_card">
-              <div class="section-services_card--img js-lightBoxItem">
-                <img
-                  class="card-img"
-                  src="images/slider4.jpg"
-                  alt="card1"
-                  data-source="images/slider4.jpg"
-                />
-                <div class="section-services_card--overline">
-                  <div class="overline-icon">
+                  <div class="overline-icon js-lightboxOpen">
                     <img src="images/zoom.svg" alt="zoom" />
                   </div>
                 </div>
@@ -434,8 +374,10 @@
         <div class="lightbox js-lightbox">
           <div class="lightbox__overlay"></div>
           <div class="lightbox__content">
+              <div class="container_img">
             <img class="lightbox__image" src="" alt="" />
-            <span class="lightbox_close js-lightbox-close">х</span>
+            <span class="lightbox_close js-lightboxClose">х</span>
+            </div>
           </div>
         </div>
       </section>
