--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <!-- Page Header-->
+    <!--Header-->
     <header class="page-header">
       <!-- Burger button -mobile -->
       <div class="burger" id="burger">
@@ -72,9 +72,7 @@
               <a class="social-link" href="#"><i class="fab fa-twitter"></i></a>
             </li>
             <li>
-              <a class="social-link" href="#"
-                ><i class="fab fa-instagram"></i
-              ></a>
+              <a class="social-link" href="#"><i class="fab fa-instagram"></i></a>
             </li>
             <li>
               <a class="social-link" href="#"
@@ -226,11 +224,11 @@
       </div>
     </header>
     <main>
+       <!-- Slides -->
       <section class="section-slider">
         <div class="swiper-container">
-          <!-- Additional required wrapper -->
-          <div class="swiper-wrapper">
-            <!-- Slides -->
+          <!-- swiper slider -->
+          <div class="swiper-wrapper">        
             <div class="swiper-slide">
               <img class="section-slider_img" src="images/slider1.jpg" alt="" />
               <div class="container">
@@ -306,6 +304,7 @@
           </div>
         </div>
       </section>
+      <!-- Section services -->
       <section class="section-services container">
         <h3 class="section-title">services</h3>
         <div class="row">
@@ -382,6 +381,79 @@
         </div>
       </section>
     </main>
+    <footer class="footer">
+      <div class="container">
+     <div class="row">
+         <div class="footer_item  col-md-6  col-lg-3 col-xl-4">
+           <a href="index.html"> <img src="images/logo.jpg" alt="logo"></a>
+           <p class="footer_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque explicabo delectus minus, veniam, itaque velit, ex incidunt facilis quas esse optio voluptas iure impedit soluta enim fuga architecto minima eligendi?</p>
+           <div>
+           <i class="fas fa-phone-alt"></i>
+           <a class="footer_contact-link" href="tel:#">1-800-0000-000,</a>
+           </div>
+           <div>
+           <i class="far fa-envelope"></i>
+           <a class="footer_contact-link" href="mailto:#">ms-autotech@ya.ru</a>
+           </div>
+         </div>
+         <div class="footer_item  col-md-6  col-lg-3 col-xl-3">
+           <div class="footer_subtitle">
+            Quick Links
+           </div>
+           <ul class="footer-links">
+            <li ><i class="fas fa-angle-double-right"></i><a href="#"> About Us</a></li>
+            <li ><i class="fas fa-angle-double-right"></i><a href="#">Our Services</a></li>
+            <li ><i class="fas fa-angle-double-right"></i><a href="#">How It Works</a></li>
+            <li ><i class="fas fa-angle-double-right"></i><a href="#">Blogs &amp; News</a></li>
+            <li ><i class="fas fa-angle-double-right"></i><a href="#">Contact Us</a></li>
+            <li ><i class="fas fa-angle-double-right"></i><a href="#">Faq</a></li>
+        </ul>
+         </div>
+         <div class="footer_item  col-md-6 col-lg-3 col-xl-3">
+          <div class="footer_subtitle">
+            Our Services
+           </div>
+           <ul class="footer-links">
+            <li><i class="fas fa-angle-double-right"></i><a href="#">Services 1</a></li>
+            <li><i class="fas fa-angle-double-right"></i><a href="#">Services 2</a></li>
+             <li><i class="fas fa-angle-double-right"></i><a href="#">Services 3</a></li>
+             <li><i class="fas fa-angle-double-right"></i><a href="#">Services 4</a></li>
+             <li><i class="fas fa-angle-double-right"></i><a href="#">Services 5</a></li>
+             <li><i class="fas fa-angle-double-right"></i><a href="#">Services 6</a></li>
+        </ul>
+         </div>
+         <div class="footer_item col-md-6 col-lg-3 col-xl-2">
+          <button class="main-btn btn-color footer_btn">Book</button>
+          <button class="main-btn transparent-btn footer_btn">learn more</button>
+          <button class="main-btn transparent-btn footer_btn">learn more</button>
+          <ul class="footer_social-list">
+            <li>
+              <a href="#"
+                ><i class="fab fa-facebook-f"></i
+              ></a>
+            </li>
+            <li>
+              <a  href="#"><i class="fab fa-twitter"></i></a>
+            </li>
+            <li>
+              <a  href="#"><i class="fab fa-instagram"></i></a>
+            </li>
+            <li>
+              <a href="#"
+                ><i class="fab fa-google-plus-g"></i
+              ></a>
+            </li>
+            <li>
+              <a  href="#"
+                ><i class="fab fa-linkedin-in"></i
+              ></a>
+            </li>
+          </ul>
+         </div>
+         <div class="copyright">© Brush Sharp 2020 Allright Reserved</div>
+     </div>
+     </div>
+    </footer>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="script/script.js"></script>
   </body>
