--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
     <footer class="footer">
       <div class="container">
      <div class="row">
-         <div class="footer_item  col-md-6  col-lg-3 col-xl-4">
+         <div class="footer_item col-11 offset-1  col-md-6 offset-0 col-lg-3 col-xl-4">
            <a href="index.html"> <img src="images/logo.jpg" alt="logo"></a>
            <p class="footer_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque explicabo delectus minus, veniam, itaque velit, ex incidunt facilis quas esse optio voluptas iure impedit soluta enim fuga architecto minima eligendi?</p>
            <div>
@@ -396,7 +396,7 @@
            <a class="footer_contact-link" href="mailto:#">ms-autotech@ya.ru</a>
            </div>
          </div>
-         <div class="footer_item  col-md-6  col-lg-3 col-xl-3">
+         <div class="footer_item  col-11 offset-1  col-md-6 offset-0  col-lg-3 col-xl-3">
            <div class="footer_subtitle">
             Quick Links
            </div>
@@ -409,7 +409,7 @@
             <li ><i class="fas fa-angle-double-right"></i><a href="#">Faq</a></li>
         </ul>
          </div>
-         <div class="footer_item  col-md-6 col-lg-3 col-xl-3">
+         <div class="footer_item  col-11 offset-1  col-md-6 offset-0 col-lg-3 col-xl-3">
           <div class="footer_subtitle">
             Our Services
            </div>
