--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8" />
@@ -7,8 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <!-- Stylesheets-->
-    <link rel="stylesheet" type="text/css"
-        href="//fonts.googleapis.com/css?family=Oswald:200,400%7CLato:300,400,300italic,700%7CMontserrat:900" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+     <link href="http://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&family=Oswald:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+        <!-- BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
@@ -196,16 +197,13 @@
             <div class="section-about_wrapper">
                 <div class="row justify-content-center justify-content-md-between">
                     <div class="col-sm-10 col-md-7 col-xxl-6">
-                        <h3 class="section-about_title">About this project</h3>
+                        <h3 class="section-about_title">About this project. Привет.</h3>
                         <div class="content-box">
                             <p class="section-about_top-text">
-                                If you’re tired of driving worn out or poorly maintained
-                                equipment, you’re going to love our organized and reliable
-                                delivery services.
+                                Привет мир! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus facere quia id placeat debitis nesciunt minus
                             </p>
                             <p class="section-about_midle-text">
-                                Around the world and around the clock, you can trust our
-                                logistics and shipping services to meet your deadline. We have
+                                Привет мир Around the world and around the clock, you can trust our logistics and shipping services to meet your deadline. We have
                                 lots of delivery services available, so we can find a solution
                                 for you. With our delivery services, you can choose anything
                                 from overnight parcel delivery to heavyweight freight. And if
@@ -213,7 +211,7 @@
                                 to find a custom solution.
                             </p>
                             <p class="section-about_bottom-text">
-                                Whatever delivery you need to make, wherever it needs to go,
+                                Привет мир Whatever delivery you need to make, wherever it needs to go,
                                 as a carrier with an integrated network spanning over 200
                                 countries we've got people ready to deliver your goods.
                             </p>
@@ -271,7 +269,7 @@
                         </div>
                     </div>
                     <div class="col-md-7 col-xxl-7">
-                        <img src="images/slider4.jpg" alt="" />
+                        <img src="images/about1.jpg" alt="" />
                     </div>
                 </div>
                 <div class="section-servises_item item-right row  justify-content-center justify-content-md-between">
@@ -291,7 +289,7 @@
                         </div>
                     </div>
                     <div class="col-md-7 order-md-1 col-xxl-7">
-                        <img src="images/slider5.jpg" alt="" />
+                        <img src="images/about2.jpg" alt="" />
                     </div>
                 </div>
                 <div class="section-servises_item item-clider row justify-content-center justify-content-md-between">
@@ -299,14 +297,11 @@
                         <h3 class="section-about_title">Trucks for you</h3>
                         <div class="section-servises_item-text-block">
                             <p class="section-about_top-text">
-                                We offer sustainable and reliable trucks driven by experienced
+                                привет We offer sustainable and reliable trucks driven by experienced
                                 specialists all over the USA, Europe, and Asia.
                             </p>
                             <p class="section-about_midle-text">
-                                Our company offers truck fleeting to businesses throughout the
-                                world with drivers handling stops to any area and everywhere
-                                in your itinerary. All our trucks and drivers are certified
-                                and can be hired for both corporate and individual delivery.
+                               привет lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus, saepe illo. Fugit a, impedit sequi tempora obcaecati harum nesciunt officiis voluptatem voluptatibus ducimus aliquid nostrum eaque laboriosam? Cupiditate, quos totam?
                             </p>
                         </div>
                     </div>
