--- a/about.html
+++ b/about.html
@@ -8,7 +8,8 @@
     <title>Document</title>
     <!-- Stylesheets-->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-     <link href="http://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&family=Oswald:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css"
+    href="//fonts.googleapis.com/css?family=Oswald:200,400%7CMontserrat:900" />
         <!-- BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous" />
